--- a/ESP32TTGO-OLED-18650/ESP32_Wemos_with_display/platformio.ini
+++ b/ESP32TTGO-OLED-18650/ESP32_Wemos_with_display/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = lolin_d32
 framework = arduino
 ;platformio lib install 562
+lib_deps =
+  # Using a library name
+  ESP8266 and ESP32 Oled Driver for SSD1306 display
